2009-10-19  Marshall Culpepper  <mculpepper@appcelerator.com>

Reviewed by Adam Roben.

        implemented ClipboardWin::files()
        https://bugs.webkit.org/show_bug.cgi?id=29666

        * platform/win/ClipboardWin.cpp:
        (WebCore::ClipboardWin::files):

Canonical link: https://commits.webkit.org/41264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49810 268f45cc-cd09-0410-ab3c-d52691b4dbfc